<resources>
    <!-- Translations are managed at this page: https://droidkaigi2017.oneskyapp.com/

     DO NOT MANUALLY EDIT TRANSLATIONS.

     -->

    <!-- App name. -->
    <string name="app_name">DroidKaigi 2017</string>

    <string name="close">Close</string>

    <string name="lang_en_in_en" translatable="false">English</string>
    <string name="lang_ja_in_en" translatable="false">Japanese</string>

    <string name="lang_en_in_ja" translatable="false">英語</string>
    <string name="lang_ja_in_ja" translatable="false">日本語</string>

    <string name="lang_en">@string/lang_en_in_en</string>
    <string name="lang_ja">@string/lang_ja_in_en</string>

    <string name="sessions">Sessions</string>
    <string name="map">Map</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="retry">Retry</string>

    <!-- Splash -->
    <string name="splash_title">DroidKaigi 2017</string>

    <!-- Sessions -->
    <string name="session_minutes">(%1$d min)</string>
    <string name="session_detail">Session Detail</string>
    <string name="speaker">Speaker</string>
    <string name="session_time_range">%1$s - %2$s (%3$d min)</string>
    <string name="description">Description</string>
    <string name="slide_and_video">Slide＆Video</string>
    <string name="send_feedback">Send feedback</string>
    <string name="session_checked">Checked this session</string>
    <string name="session_unchecked">Unchecked this session</string>
    <string name="session_check">Check</string>
    <string name="session_uncheck">Uncheck</string>

    <!-- My Sessions -->
    <string name="my_session">My Session</string>
    <string name="my_session_empty">No items here. Let\'s check out all sessions and put your favourite!</string>

    <!-- Map -->
    <string name="map_start_navigation">Start Navigation</string>
    <string name="map_venue_title">Venue</string>
    <string name="map_venue_value">Bellesalle Shinjuku Grand Conference Center</string>
    <string name="map_address_title">Address</string>
    <string name="map_address_value">Bellesalle Shinjuku Grand Conference Center\nSumitomo Fudosan Shinjuku Grand Tower 5F\n8–17–3 Nishi Shinjuku, Shinjuku City, Tokyo 160–0023</string>
    <string name="map_access_title">Access by Train</string>
    <string name="map_access_value">- Marunouchi subway line: 3 minutes walk from Nishi Shinjuku Station Gate No.1\n- Toei Oedo subway line: 7 minutes walk from Tochomae Station Gate E4\n- Toei Oedo subway line: 11 minutes walk from Shinjuku-Nishiguchi Station Gate D4\n- JR lines, Marunouchi/Toei Shinjuku/Toei Oedo subway line, Odakyu line, Keio line: 15 minutes walk from Shinjuku Station West Gate</string>
    <string name="map_route_guide_url">https://droidkaigi.github.io/2017/en/route.html</string>


    <!-- Settings -->
    <string name="settings_language">Change language</string>
    <string name="settings_language_description">Choose language in this app. After changed, app will restart.</string>
    <string name="settings_notification_group">Notification</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_description">Choose whether to receive notification in this app.</string>
    <string name="settings_heads_up_notification">Heads-up Notification</string>
    <string name="settings_heads_up_notification_description">Choose whether to use Heads-up Notification.</string>
    <string name="settings_local_time">Show local time</string>
    <string name="settings_local_time_description">Use your local time instead of the conference\’s local time.</string>
    <string name="settings_developer_group">Developer menu</string>
    <string name="settings_developer_tips">Tips: To show Debug menu, press Command + M for emulators or shake your device.(Only works for Debug build)</string>
    <string name="settings_debug_overlay_view">Debug Overlay View</string>
    <string name="settings_debug_overlay_view_description">Choose whether to show Debug Overlay View.</string>
    <string name="settings_debug_overlay_view_toast">Before enabling this setting, grant draw over other apps permission.</string>

    <!-- Information -->
    <string name="info_about_droidkaigi">DroidKaigi is an Android conference for Engineers to share and communicate Android technical information.</string>
    <string name="info_sponsors_description">DroidKaigi is supported by many sponsors. Thank you so much!</string>
    <string name="info_questionnaire_title">Questionnaire</string>
    <string name="info_questionnaire_description">Please cooperate with the questionnaire to improve DroidKaigi.</string>
    <string name="info_contributors_description">Awesome contributors for this app.</string>
    <string name="info_help_translate">Your contribution is much appreciated! Tap here to contribute.</string>
    <string name="info_license_title">Licenses</string>
    <string name="info_license_description">This app uses many awesome libraries. Thank you so much!</string>
    <string name="info_dev_info_title">Dev info</string>


    <!-- Sponsors -->
    <string name="sponsors">Sponsors</string>
    <string name="sponsors_file">sponsors_en.json</string>

    <!-- Contributors -->
    <string name="contributors">Contributors</string>
    <string name="contributors_people">(%1$d people)</string>
    <string name="contributors_open_repository">Repository</string>
    <string name="contributors_load_failed">Failed to show contributors.</string>

    <string name="help_translate">Help Translate</string>

    <!-- Licenses -->
    <string name="licenses">Licenses</string>

    <!-- Session feedback -->
    <string name="session_feedback">Session feedback</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="search_hint">Search by keywords</string>
    <string name="notification_title">%1$s will start soon</string>
    <string name="notification_message">%1$s ~ %2$s @ %3$s</string>

    <!-- questionnaire -->
    <string name="questionnaire">Questionnaire</string>
    <string name="send_questionnaire">Send Questionnaire</string>
    <string name="questionnaire_other_field_post_value" translatable="false">__other_option__</string>
    <string name="questionnaire_other_field_label">[need translate]その他</string>
    <string name="questionnaire_other_field_hint">[need update]optional</string>

    <string name="questionnaire_title_age">Age</string>
    <string name="questionnaire_description_age">How old are you?</string>
    <string-array name="questionnaire_labels_age">
        <item>10~19</item>
        <item>20~29</item>
        <item>30~39</item>
        <item>40~49</item>
        <item>50~59</item>
        <item>60~</item>
        <item>secret</item>
    </string-array>

    <string name="questionnaire_title_android_user">How long have you been using Android?</string>
    <string-array name="questionnaire_labels_android_user">
        <item>None</item>
        <item>less than a half year</item>
        <item>0.5~1 year</item>
        <item>1~2 years</item>
        <item>2~3 years</item>
        <item>3~4 years</item>
        <item>4~5 years</item>
        <item>more than 5 years</item>
    </string-array>

    <string name="questionnaire_title_android_developer">How long have you been developing Android app?</string>
    <string-array name="questionnaire_labels_android_developer">
        <item>None</item>
        <item>less than a half year</item>
        <item>0.5~1 year</item>
        <item>1~2 years</item>
        <item>2~3 years</item>
        <item>3~4 years</item>
        <item>4~5 years</item>
        <item>more than 5 years</item>
    </string-array>

    <string name="questionnaire_title_job_category">Please tell me the job category?</string>
    <string-array name="questionnaire_labels_job_category">
        <item>Engineer(Android)</item>
        <item>Engineer(non Android)</item>
        <item>Director</item>
        <item>Designer</item>
        <item>Marketing</item>
        <item>HR</item>
        <item>Media</item>
        <item>Teacher</item>
        <item>Student</item>
        <item>Secret</item>
    </string-array>

    <string name="questionnaire_title_job_title">Please tell me the job title?</string>
    <string-array name="questionnaire_labels_job_title">
        <item>Business owner</item>
        <item>Manager</item>
        <item>Lead, Senior, Chief Engineer</item>
        <item>Engineer</item>
        <item>Student(with programming experience)</item>
        <item>Student(without programming experience)</item>
        <item>Secret</item>
    </string-array>

    <string name="questionnaire_title_attendance">Have you attend past DroidKaigi?</string>
    <string-array name="questionnaire_labels_attendance">
        <item>2015</item>
        <item>2016</item>
        <item>First time</item>
    </string-array>

    <string name="questionnaire_title_found">How do you know DroidKaigi?</string>
    <string-array name="questionnaire_labels_found">
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Google+</item>
        <item>Mailing list</item>
        <item>Podcast</item>
        <item>News</item>
        <item>Blog</item>
        <item>group chat</item>
        <item>co-worker/friends</item>
        <item>Internet advertisement</item>
    </string-array>

    <string name="questionnaire_title_ticket">Which ticket did you get?</string>
    <string-array name="questionnaire_labels_ticket">
        <item>Regular(¥8,000)</item>
        <item>Early Bird: incl. AfterParty (¥8,000)</item>
        <item>Students: incl. AfterParty (¥4,000)</item>
        <item>Regular: incl. AfterParty (¥12,000)</item>
        <item>From presenter</item>
        <item>Presenter</item>
        <item>Guest</item>
    </string-array>

    <string name="questionnaire_title_ticket_price">What do you think about the ticket price?</string>
    <string-array name="questionnaire_labels_ticket_price">
        <item>Expensive</item>
        <item>Reasonable</item>
        <item>Inexpensive</item>
    </string-array>

    <string name="questionnaire_title_ticket_with_after_party">What do you think about the ticket with after party?</string>
    <string-array name="questionnaire_labels_ticket_with_after_party">
        <item>Good</item>
        <item>Normal</item>
        <item>Bad</item>
    </string-array>
    <string name="questionnaire_title_ticket_price_opinion">Do you have any opinion about the ticket price?</string>
    <string name="questionnaire_title_satisfaction">今回のDroidKaigiの満足度を５段階で教えてください</string>
    <string name="questionnaire_label_satisfaction_start">とても悪い</string>
    <string name="questionnaire_label_satisfaction_end">とても良い</string>

    <!-- App Shortcuts -->
    <string name="shortcut_search_title">Search</string>
</resources>
