<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <data>

        <variable
                name="viewModel"
                type="io.github.droidkaigi.confsched2017.viewmodel.SettingsViewModel"
                />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:id="@+id/root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <io.github.droidkaigi.confsched2017.view.customview.SettingSwitchRowView
                    android:id="@+id/local_time_switch_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingDefaultValue="@{viewModel.shouldShowLocalTime}"
                    app:settingDescription="@string/settings_local_time_description"
                    app:settingOnCheckedChanged="@{(v, checked) -> viewModel.onCheckedShowLocalTimeSetting(checked)}"
                    app:settingTitle="@string/settings_local_time"
                    />

            <View style="@style/Border" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_16dp"
                    >

                <TextView
                        style="@style/TextSubheading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_notification_group"
                        android:textColor="?attr/colorPrimary"
                        />

            </RelativeLayout>

            <io.github.droidkaigi.confsched2017.view.customview.SettingSwitchRowView
                    android:id="@+id/notification_switch_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:settingDefaultValue="@{viewModel.shouldNotify}"
                    app:settingDescription="@string/settings_notification_description"
                    app:settingOnCheckedChanged="@{(v, checked) -> viewModel.onCheckedNotificationSetting(checked)}"
                    app:settingTitle="@string/settings_notification"
                    />

            <View
                    style="@style/Border"
                    android:visibility="@{viewModel.getShowHeadsUpSettingVisibility}"
                    />

            <io.github.droidkaigi.confsched2017.view.customview.SettingSwitchRowView
                    android:id="@+id/heads_up_switch_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.getShowHeadsUpSettingVisibility}"
                    app:settingDefaultValue="@{viewModel.isHeadsUp}"
                    app:settingDescription="@string/settings_heads_up_notification_description"
                    app:settingEnabled="@{viewModel.shouldNotify}"
                    app:settingOnCheckedChanged="@{(v, checked) -> viewModel.onCheckedHeadsUpSetting(checked)}"
                    app:settingTitle="@string/settings_heads_up_notification"
                    />

            <View
                    android:id="@+id/heads_up_border"
                    style="@style/Border"
                    android:visibility="@{viewModel.getShowHeadsUpSettingVisibility}"
                    />

        </LinearLayout>

    </ScrollView>

</layout>
